# rlib-size-test

./: Cargo.toml  README.md
executable-c/: .gitignore  README.md  build-mpack.sh  build.sh  test.c
src/: lib.rs
