[package]
name = "rlib-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp = "0.8"
cfg-if = "1"
regex = { version = "1", optional = true }
onig = { version = "6", optional = true}
anyhow = "1"

[features]
regex-rust = ["regex"]
regex-onig = ["onig"]

[profile.release]
lto = "thin"
